Consider reverse axis in custom item positioning

Fixes: QTBUG-133759
Pick-to: 6.10 6.9 6.8
Change-Id: I755e353cb527070f61fe18c14c19118675d1af8e
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>