src/graphs3d/qml/qquickgraphsitem.cpp
@@ -3675,7 +3675,23 @@ QVector3D QQuickGraphsItem::graphPosToAbsolute(QVector3D position)
     const int minY = axisY()->min();
     const int maxZ = axisZ()->max();
     const int minZ = axisZ()->min();
-    const QVector3D adjustment = m_scaleWithBackground * QVector3D(1.0f, 1.0f, -1.0f);
+
+    float xAdjust = 1.0f;
+    float yAdjust = 1.0f;
+    float zAdjust = 1.0f;
+
+    auto xValueAxis = qobject_cast<QValue3DAxis *>(axisX());
+    auto yValueAxis = qobject_cast<QValue3DAxis *>(axisY());
+    auto zValueAxis = qobject_cast<QValue3DAxis *>(axisZ());
+
+    if (xValueAxis)
+        xAdjust = xValueAxis->reversed()? -1.0f: 1.0f;
+    if (yValueAxis)
+        yAdjust = yValueAxis->reversed()? -1.0f: 1.0f;
+    if (zValueAxis)
+        zAdjust = zValueAxis->reversed()? 1.0f: -1.0f;
+
+    const QVector3D adjustment = m_scaleWithBackground * QVector3D(xAdjust, yAdjust, zAdjust);
 
     float xNormalizer = maxX - minX;
     float xPos = (pos.x() - minX) / xNormalizer;
